# Pingi-Interview-Task

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
load_test/: locustfile.py
src/apps/products/: apis.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tests.py  urls.py
src/apps/products/migrations/: 0001_initial.py  0002_registration.py
src/common/: exception_handler.py
src/config/: __init__.py  env_loader.py
src/config/schemas/: __init__.py  django.py  locust.py  postgresql.py
src/core/: settings.py  urls.py
